# SEM3_DSA_C

./: .gitignore  CMakeLists.txt  justfile  main.c  tests.c
.github/: README.md
.github/workflows/: build.yml
examples/: expressions.c  hanoi.c
lib/: eval.c  eval.h  eval.test.c  linked.c  linked.h  linked.test.c  queue.c  queue.h  queue.test.c  search.c  search.h  search.test.c  sort.c  sort.h  sort.test.c  stack.c  stack.h  stack.test.c  utils.h
